# azure-foundry

./: .gitignore  README.md  pyproject.toml
blog/: foundry-agent-series-outline.md
blog/part1/: part1-your-first-agent.md
blog/part2/: part2-builtin-tools.md
blog/part3/: part3-function-calling.md
blog/part4/: part4-openapi-tools.md
blog/part5/: part5-mcp-server.md
blog/part6/: part6-toolboxes.md
blog/part7/: part7-skills.md
blog/part8/: part8-multi-agent.md
blog/part9/: part9-evaluation-monitoring.md
src/part1/: agent_hello.py
