[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-service-series"
version = "0.1.0"
description = "Sample code for the Microsoft Foundry Agent Service blog series"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-projects>=2.0.0",
    "azure-identity",
    "openai",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
